--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,18 @@
-#ÅäÖÃ¶Ë¿ÚºÅ
+#ï¿½ï¿½ï¿½Ã¶Ë¿Úºï¿½
 #server.port=6655
 server.port=6653
 #server.address=172.30.201.82
-spring.datasource.url=jdbc:mysql://118.178.104.206:3306/user?useUnicode=true&serverTimezone=GMT%2b8&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://localhost:3306/user?useUnicode=true&serverTimezone=GMT%2b8&allowMultiQueries=true
 spring.datasource.username=root
-spring.datasource.password=leixin409409
-#tomac±àÂë
+spring.datasource.password=210183
+#tomacï¿½ï¿½ï¿½ï¿½
 server.tomcat.uri-encoding=utf-8
 mybatis.mapper-locations=classpath:mapper/*.xml
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.datasource.hikari.max-lifetime=30000
 spring.profiles.active=dev
-#163ÓÊÏä
+#163ï¿½ï¿½ï¿½ï¿½
 spring.mail.host=smtp.163.com
 spring.mail.port=465
 spring.mail.username=WeixiaoVerify@163.com
@@ -24,10 +24,10 @@ spring.mail.default-encoding=UTF-8
 
 
 
-#µ¥¸öÎÄ¼þ×î´ó´óÐ¡
+#ï¿½ï¿½ï¿½ï¿½ï¿½Ä¼ï¿½ï¿½ï¿½ï¿½ï¿½Ð¡
 spring.servlet.multipart.max-file-size=10MB
 
-#ËùÓÐÉÏ´«ÎÄ¼þ×î´ó´óÐ¡
+#ï¿½ï¿½ï¿½ï¿½ï¿½Ï´ï¿½ï¿½Ä¼ï¿½ï¿½ï¿½ï¿½ï¿½Ð¡
 spring.servlet.multipart.max-request-size=100MB
 
 
